<resources>
    <string name="app_name">appEnsayo</string>
    <string name="txt_play">PLAY</string>
    <string name="txt_profile">PROFIEL</string>
    <string name="txt_setting">SETTING</string>
    <string name="txt_about">ABOUT</string>
    <string name="txt_close">CLOSE</string>
    <string name="txt_given">has given the button</string>
    <string name="txt_user">USER</string>
    <string name="txt_password">PASSWORD</string>
    <string name="txt_login">SING IN</string>
    <string name="txt_register">SING UP</string>
    <string name="Terminos_condiciones">" TERMS AND CONDITIONS"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="terminos_con">Reglamento de Uso del Portal Móvil (Personas Naturales y Personas Jurídicas ) El presente documento establece las condiciones mediante las cuales se regirá el uso de la aplicación móvil: Skandia APP Colombia (en adelante la aplicación), la cual es operada por SKANDIA HOLDING DE COLOMBIA S.A., compañía constituida en Colombia y domiciliada en la ciudad de Bogotá y que actúa en representación de las compañías SKANDIA SEGUROS DE VIDA S.A., SKANDIA HOLDING DE COLOMBIA S.A., SKANDIA VALORES S.A. SOCIEDAD COMISIONSITA DE BOLSA, SKANDIA FIDUCIARIA S.A. y ​​SKANDIA PENSIONES Y CESANTIAS S.A. (en adelante SKANDIA).  La aplicación funcionará como un nuevo canal para la realización de ciertas actividades descritas más adelante con el objeto de facilitar el acceso a los clientes de las compañías de Skandia.  El usuario se compromete a leer los términos y condiciones aquí establecidas, previamente a la descarga de la aplicación, por tanto, en caso de realizar la instalación se entiende que cuenta con el conocimiento integral de este documento y la consecuente aceptación de la totalidad de sus estipulaciones.  El Usuario reconoce que el ingreso de su información personal, y los datos que contiene la aplicación a su disposición respecto a los productos activos con las compañías del Grupo Skandia en Colombia, la realizan de manera voluntaria, quienes optan por acceder a esta aplicación en Colombia o desde fuera del territorio nacional, lo hacen por iniciativa propia y son responsables del cumplimiento de las leyes locales, en la medida en que dichas leyes sean aplicables en su correspondiente país. En caso de que se acceda por parte de menores de edad, deben contar con la supervisión de un adulto en todo momento desde la descarga y durante el uso de la aplicación, en el evento en que no se cumpla esta condición, le agradecemos no hacer uso de la aplicación.    Alcance y Uso El usuario de la aplicación entiende y acepta que no obstante es operada por SKANDIA HOLDING DE COLOMBIA S.A., la información contenida en la misma será la referente a su vínculo comercial o contractual con las siguientes compañías: SKANDIA SEGUROS DE VIDA S.A., SKANDIA HOLDING DE COLOMBIA S.A., SKANDIA VALORES S.A. SOCIEDAD COMISIONSITA DE BOLSA, SKANDIA FIDUCIARIA S.A. y SKANDIA PENSIONES Y CESANTIAS S.A. (en adelante SKANDIA), por tanto, las funcionalidades ofrecidas por la aplicación serán entregadas por cada compañía de acuerdo con su vinculación.  En la aplicación se pondrá a disposición del CLIENTE información y/o permitirá la realización de las transacciones determinadas o habilitadas por SKANDIA para cada producto en particular. Skandia podrá adicionar, modificar o eliminar las funcionalidades en cualquier momento, lo cual acepta el usuario mediante la instalación de la aplicación. En todo caso, al momento de realizar dichas modificaciones se notificarán al usuario a través de la misma aplicación móvil una vez inicie sesión.  Los tiempos de respuesta, tramites y demás solicitudes efectuadas por el usuario mediante la aplicación serán procesadas de conformidad con las especificaciones de cada producto activo con Skandia.  El usuario acepta y autoriza que los registros electrónicos de las actividades mencionadas, que realice en la aplicación constituyen plena prueba de los mismos.    Requisitos para Uso El usuario deberá contar con un dispositivo móvil inteligente (Smartphone) o Tableta con sistema operativo Android o IOS, cualquiera de estos con acceso a internet, ambos seguros y confiables. Skandia, no será responsable por la seguridad de los equipos Smartphone propiedad de los usuarios utilizados para el acceso al canal, ni por la disponibilidad del servicio en los dispositivos en los cuales se descargue la aplicación.  En la forma permitida por la ley, los materiales de la aplicación se suministran sin garantía de ningún género, expresa o implícita, incluyendo sin limitación las garantías de calidad satisfactoria, comerciabilidad, adecuación para un fin particular o no infracción, por tanto, Skandia no garantiza el funcionamiento adecuado en los distintos sistemas operativos o dispositivos en los cuales se haga uso de la aplicación.  Para acceder al portal, EL CLIENTE contará con Usuario y Clave, que lo identifica en su relación con SKANDIA, los cuales serán los mismos utilizados en el portal web. Adicional a lo anterior se requerirá a EL CLIENTE, registrar preguntas de seguridad, las cuales serán solicitadas al momento de intentar ingresar el portal, sólo cuando el cliente ingrese desde un equipo registrado no se solicitará responder las preguntas definidas con anterioridad.    Obligaciones de los Usuarios El Usuario se obliga a usar la aplicación y los contenidos encontrados en ella de una manera diligente, correcta, lícita y en especial, se compromete a NO realizar las conductas descritas a continuación: (a) Utilizar los contenidos de forma, con fines o efectos contrarios a la ley, a la moral y a las buenas costumbres generalmente aceptadas o al orden público; (b) Reproducir, copiar, representar, utilizar, distribuir, transformar o modificar los contenidos de la aplicación, por cualquier procedimiento o sobre cualquier soporte, total o parcial, o permitir el acceso del público a través de cualquier modalidad de comunicación pública; (c) Utilizar los contenidos de cualquier manera que entrañen un riesgo de daño o inutilización de la aplicación o de los contenidos o de terceros; (d) Suprimir, eludir o manipular el derecho de autor y demás datos identificativos de los derechos de autor incorporados a los contenidos, así como los dispositivos técnicos de protección, o cualesquiera mecanismos de información que pudieren tener los contenidos; (e) Emplear los contenidos y, en particular, la información de cualquier clase obtenida a través de la aplicación para distribuir, transmitir, remitir, modificar, rehusar o reportar la publicidad o los contenidos de esta con fines de venta directa o con cualquier otra clase de finalidad comercial, mensajes no solicitados dirigidos a una pluralidad de personas con independencia de su finalidad, así como comercializar o divulgar de cualquier modo dicha información; (f) No permitir que terceros ajenos a usted usen la aplicación móvil con su clave; g) Utilizar la aplicación y los contenidos con fines lícitos y/o ilícitos, contrarios a lo establecido en estos Términos y Condiciones, o al uso mismo de la aplicación, que sean lesivos de los derechos e intereses de terceros, o que de cualquier forma puedan dañar, inutilizar, sobrecargar o deteriorar la aplicación y los contenidos o impedir la normal utilización o disfrute de esta y de los contenidos por parte de los usuarios.</string>

    <string-array name="categorias">
        <item>Futbol</item>
        <item>Tennis</item>
        <item>Natacion</item>
        <item>Beisbol</item>
        <item>Carreras</item>
    </string-array>
</resources>