<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="30dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_twitch"
            >

        </ImageView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="50">

    <Button
            android:id="@+id/btn_jugar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_play"
            android:layout_weight="25"
            >

        </Button>

        <Button
            android:id="@+id/btn_perfil"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_profile"
            android:layout_weight="25">

        </Button>
        <Button
            android:id="@+id/btn_ajustes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_setting"
            android:layout_weight="25">

        </Button>

        <Button
            android:id="@+id/btn_acerca_de"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_about"
            android:layout_weight="25">

        </Button>
    </LinearLayout>

</LinearLayout>