<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_twitch"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical"
        android:layout_gravity="">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:text="@string/txt_user"
                android:layout_marginLeft="5dp"
                android:textSize="20dp"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                style="@style/MyEditText">
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:text="@string/txt_password"
                android:layout_marginLeft="5dp"
                android:textSize="20dp"></TextView>
            <EditText

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                style="@style/MyEditText">
            </EditText>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:orientation="vertical"
            android:layout_marginVertical="20dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/txt_login"
                android:layout_weight="50"></Button>

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/txt_register"
                android:layout_weight="50"
                ></Button>


        </LinearLayout>


    </LinearLayout>



</LinearLayout>